--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           aria-labelledby="offcanvasRightLabel"
         >
           <div class="offcanvas-header">
-            <h5 id="offcanvasRightLabel">Offcanvas right</h5>
+            <h5 id="offcanvasRightLabel"><img src="./imgs/logo.png" alt="duck2"></h5>
             <button
               type="button"
               class="btn-close text-reset"
@@ -60,27 +60,48 @@
               aria-label="Close"
             ></button>
           </div>
-          <div class="offcanvas-body d-lg-none">dad</div>
+          <div class="offcanvas-body d-lg-none">
+               <ul class="navbar-nav me-auto gap-4 mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Punti di forza</a>
+                 <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Recensioni</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Paperelle</a>
+              </li>
+               <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">FAQs</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Newsletter</a>
+              </li>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="collapse navbar-collapse justify-content-end  " id="navbarSupportedContent">
           <form class="d-flex" role="search">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto gap-4 mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Punti di forza</a>
                  <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="#">Recensioni</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Paperelle</a>
               </li>
                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="#">FAQs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Newsletter</a>
               </li>
               </li>
             </ul>
