--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
           tabindex="-1"
           id="offcanvasRight"
           aria-labelledby="offcanvasRightLabel"
+          role="none"
         >
           <div class="offcanvas-header">
-            <h5 id="offcanvasRightLabel"><img src="./imgs/logo.png" alt="duck2"></h5>
+            <h5 id="offcanvasRightLabel">
+              <img src="./imgs/logo.png" alt="duck2" />
+            </h5>
             <button
               type="button"
               class="btn-close text-reset"
@@ -61,29 +64,32 @@
             ></button>
           </div>
           <div class="offcanvas-body d-lg-none">
-               <ul class="navbar-nav me-auto gap-4 mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto gap-4 mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Punti di forza</a>
-                 <li class="nav-item">
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#">Recensioni</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Paperelle</a>
               </li>
-               <li class="nav-item">
+              <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#">FAQs</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Newsletter</a>
               </li>
-              </li>
             </ul>
           </div>
         </div>
-        <div class="collapse navbar-collapse justify-content-end  " id="navbarSupportedContent">
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
           <form class="d-flex" role="search">
             <ul class="navbar-nav me-auto gap-4 mb-2 mb-lg-0">
               <li class="nav-item">
@@ -91,24 +97,40 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Punti di forza</a>
-                 <li class="nav-item">
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#">Recensioni</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Paperelle</a>
               </li>
-               <li class="nav-item">
+              <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#">FAQs</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Newsletter</a>
-              </li>
               </li>
             </ul>
           </form>
         </div>
       </div>
     </nav>
+    <header>
+      <div class="row gx-0">
+        <div class="col-lg-6 p-0"><div class="bannerimg"></div></div>
+        <div
+          class="col-lg-6 bannerbg d-flex align-items-center flex-column text-center"
+        >
+          <h1 style="font-size: 60px">Rubber Duck Debuggings</h1>
+          <p style="font-size: 23px">
+            Spiegare il codice a una paperella di gomma aiuta i programmatori a
+            chiarire il pensiero e individuare errori nascosti
+          </p>
+          <button class="custombtn mt-3 py-3">ACQUISTALA SUBITO!</button>
+        </div>
+      </div>
+    </header>
+
     <!-- bootstrap script -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
