--- a/index.html
+++ b/index.html
@@ -130,7 +130,65 @@
         </div>
       </div>
     </header>
-
+    <section class="3-row mt-5">
+      <div class="row gx-0">
+        <div class="col-lg-4 px-5">
+          <div class="col-12 text-center my-5">
+            <h1>Lunga Durata della Batteria</h1>
+            <p>
+              Goditi ore di assistenza continua nella risoluzione dei bug grazie
+              alla lunga durata della "batteria" (ovvero, la tua pazienza) della
+              paperella di gomma.
+            </p>
+          </div>
+          <div class="col-12 text-center mb-5">
+            <h1>Compatipilità Universale</h1>
+            <p>
+              Funziona con tutti i linguaggi di programmazione e sistemi
+              operativi, la paperella di gomma è l'unico strumento di debugging
+              che non necessita di aggiornamenti.
+            </p>
+          </div>
+          <div class="col-12 text-center mt-2">
+            <h1>Design Elegante</h1>
+            <p>
+              Mostra con orgoglio il design elegante e raffinato della tua
+              paperella di gomma, disponibile in vari colori per abbinarsi al
+              tuo stile di programmatore.
+            </p>
+          </div>
+        </div>
+        <div class="col-lg-4 query">
+          <img src="./imgs/invisible.png" alt="ducksuper" class="ducksuper" />
+        </div>
+        <div class="col-lg-4 px-5">
+          <div class="col-12 text-center my-5">
+            <h1>Lunga Durata della Batteria</h1>
+            <p>
+              Goditi ore di assistenza continua nella risoluzione dei bug grazie
+              alla lunga durata della "batteria" (ovvero, la tua pazienza) della
+              paperella di gomma.
+            </p>
+          </div>
+          <div class="col-12 text-center mb-5">
+            <h1>Compatipilità Universale</h1>
+            <p>
+              Funziona con tutti i linguaggi di programmazione e sistemi
+              operativi, la paperella di gomma è l'unico strumento di debugging
+              che non necessita di aggiornamenti.
+            </p>
+          </div>
+          <div class="col-12 text-center mt-2">
+            <h1>Design Elegante</h1>
+            <p>
+              Mostra con orgoglio il design elegante e raffinato della tua
+              paperella di gomma, disponibile in vari colori per abbinarsi al
+              tuo stile di programmatore.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- bootstrap script -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
