--- a/index.html
+++ b/index.html
@@ -18,108 +18,114 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand pb-3" href="#"
-          ><img src="./imgs/logo.png" alt="duck"
-        /></a>
-        <button
-          class="d-lg-none d-flex border-0 btn btn-light"
-          type="button"
-          data-bs-toggle="offcanvas"
-          data-bs-target="#offcanvasRight"
-          aria-controls="offcanvasRight"
-        >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="30 "
-            height="30"
-            fill="currentColor"
-            class="bi bi-list-nested background-red"
-            viewBox="0 0 16 16"
+    <div class="fixednav">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand pb-3" href="#"
+            ><img src="./imgs/logo.png" alt="duck"
+          /></a>
+          <button
+            class="d-lg-none d-flex border-0 btn btn-light"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasRight"
+            aria-controls="offcanvasRight"
           >
-            <path
-              fill-rule="evenodd"
-              d="M4.5 11.5A.5.5 0 0 1 5 11h10a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5m-2-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m-2-4A.5.5 0 0 1 1 3h10a.5.5 0 0 1 0 1H1a.5.5 0 0 1-.5-.5"
-            />
-          </svg>
-        </button>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="30 "
+              height="30"
+              fill="currentColor"
+              class="bi bi-list-nested background-red"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M4.5 11.5A.5.5 0 0 1 5 11h10a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5m-2-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m-2-4A.5.5 0 0 1 1 3h10a.5.5 0 0 1 0 1H1a.5.5 0 0 1-.5-.5"
+              />
+            </svg>
+          </button>
 
-        <div
-          class="offcanvas offcanvas-end"
-          tabindex="-1"
-          id="offcanvasRight"
-          aria-labelledby="offcanvasRightLabel"
-          role="none"
-        >
-          <div class="offcanvas-header">
-            <h5 id="offcanvasRightLabel">
-              <img src="./imgs/logo.png" alt="duck2" />
-            </h5>
-            <button
-              type="button"
-              class="btn-close text-reset"
-              data-bs-dismiss="offcanvas"
-              aria-label="Close"
-            ></button>
+          <div
+            class="offcanvas offcanvas-end"
+            tabindex="-1"
+            id="offcanvasRight"
+            aria-labelledby="offcanvasRightLabel"
+            role="none"
+          >
+            <div class="offcanvas-header">
+              <h5 id="offcanvasRightLabel">
+                <img src="./imgs/logo.png" alt="duck2" />
+              </h5>
+              <button
+                type="button"
+                class="btn-close text-reset"
+                data-bs-dismiss="offcanvas"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="offcanvas-body d-lg-none">
+              <ul class="navbar-nav me-auto gap-4 mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Punti di forza</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="#"
+                    >Recensioni</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Paperelle</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="#">FAQs</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Newsletter</a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="offcanvas-body d-lg-none">
-            <ul class="navbar-nav me-auto gap-4 mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Punti di forza</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Recensioni</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Paperelle</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">FAQs</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Newsletter</a>
-              </li>
-            </ul>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarSupportedContent"
+          >
+            <form class="d-flex" role="search">
+              <ul class="navbar-nav me-auto gap-4 mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Punti di forza</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="#"
+                    >Recensioni</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Paperelle</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="#">FAQs</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Newsletter</a>
+                </li>
+              </ul>
+            </form>
           </div>
         </div>
-        <div
-          class="collapse navbar-collapse justify-content-end"
-          id="navbarSupportedContent"
-        >
-          <form class="d-flex" role="search">
-            <ul class="navbar-nav me-auto gap-4 mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Punti di forza</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Recensioni</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Paperelle</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">FAQs</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Newsletter</a>
-              </li>
-            </ul>
-          </form>
-        </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
     <header>
       <div class="row gx-0">
         <div class="col-lg-6 p-0"><div class="bannerimg"></div></div>
         <div
-          class="col-lg-6 bannerbg d-flex align-items-center flex-column text-center"
+          class="col-lg-6 bannerbg d-flex align-items-center flex-column text-center justify-content-center"
         >
           <h1 style="font-size: 60px">Rubber Duck Debuggings</h1>
           <p style="font-size: 23px">
@@ -131,7 +137,7 @@
       </div>
     </header>
     <section class="3-row mt-5">
-      <div class="row gx-0">
+      <div class="row gx-0 align-items-center">
         <div class="col-lg-4 px-5">
           <div class="col-12 text-center my-5">
             <h1>Lunga Durata della Batteria</h1>
@@ -159,7 +165,11 @@
           </div>
         </div>
         <div class="col-lg-4 query">
-          <img src="./imgs/invisible.png" alt="ducksuper" class="ducksuper" />
+          <img
+            src="./imgs/invisible.png"
+            alt="ducksuper"
+            class="ducksuper mt-5 mt-lg-0"
+          />
         </div>
         <div class="col-lg-4 px-5">
           <div class="col-12 text-center my-5">
@@ -186,6 +196,245 @@
               tuo stile di programmatore.
             </p>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="collection container-lg">
+      <h2
+        class="text-center"
+        style="font-size: 60px; margin-top: 100px; margin-bottom: 150px"
+      >
+        Cosa ne pensano i nostri sviluppatori
+      </h2>
+      <h2 class="text-center" style="font-size: 60px">
+        La collezione di paperelle
+      </h2>
+      <p class="text-center">Una paperella per ogni stile di programmazione</p>
+      <div class="row gx-0 p-2">
+        <div class="col-6 col-lg-4 p-2">
+          <img src="./imgs/product-item1.png" alt="cool-duck" class="w-100" />
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="12"
+              fill="yellow"
+              class="bi bi-star-fill mt-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="12"
+              fill="yellow"
+              class="bi bi-star-fill mt-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="12"
+              fill="yellow"
+              class="bi bi-star-fill mt-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="12"
+              fill="yellow"
+              class="bi bi-star-fill mt-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="12"
+              fill="yellow"
+              class="bi bi-star-fill mt-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            <p style="font-size: 19px" class="my-1">Classic-duck</p>
+            <p style="font-weight: bold; color: greenyellow">&dollar;15</p>
+          </div>
+        </div>
+        <div class="col-6 col-lg-4 p-2">
+          <img
+            src="./imgs/product-item2.png"
+            alt="classic-duck "
+            class="w-100"
+          />
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="12"
+              fill="yellow"
+              class="bi bi-star-fill mt-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="12"
+              fill="yellow"
+              class="bi bi-star-fill mt-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="12"
+              fill="yellow"
+              class="bi bi-star-fill mt-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="12"
+              fill="yellow"
+              class="bi bi-star-fill mt-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="12"
+              fill="yellow"
+              class="bi bi-star-fill mt-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            <p style="font-size: 19px" class="my-1">Cool-duck</p>
+            <p style="font-weight: bold; color: greenyellow">&dollar;15</p>
+          </div>
+        </div>
+        <div class="col-6 col-lg-4 p-2">
+          <img src="./imgs/product-item3.png" alt="bat-duck" class="w-100" />
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="12"
+              fill="yellow"
+              class="bi bi-star-fill mt-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="12"
+              fill="yellow"
+              class="bi bi-star-fill mt-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="12"
+              fill="yellow"
+              class="bi bi-star-fill mt-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="12"
+              fill="yellow"
+              class="bi bi-star-fill mt-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="12"
+              height="12"
+              fill="yellow"
+              class="bi bi-star-fill mt-2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            <p style="font-size: 19px" class="my-1">Cool-duck</p>
+            <p style="font-weight: bold; color: greenyellow">&dollar;15</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="FAQs container-lg">
+      <div class="row gx-0">
+        <div class="col-12 col-lg-6 mb-5">
+          <img src="./imgs/single-image2.png" alt="pcworker" />
+        </div>
+        <div class="col-12 col-lg-6 px-3">
+          <h2 style="font-size: 60px; margin-bottom: 20px">FAQs</h2>
+          <h3>
+            Come posso utilizzare la paperella di gomma per il debugging?
+            <hr />
+            <p style="font-size: 12px; padding-left: 20px; opacity: 70%">
+              il rubber duck debugging è semplice: spiega il tuo codice alla
+              paperella di gomma come se fosse un collega. Descrivendo ogni
+              passo, potresti individuare errori o capire meglio il problema La
+              paperella non risponde, ma ti aiuta a chiarire i tuoi pensieri.
+            </p>
+          </h3>
         </div>
       </div>
     </section>
