--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
       </div>
     </header>
-    <section class="3-row mt-5">
+    <section class="3-row mt-5 container-lg">
       <div class="row gx-0 align-items-center">
         <div class="col-lg-4 px-5">
           <div class="col-12 text-center my-5">
@@ -423,9 +423,9 @@
         <div class="col-12 col-lg-6 mb-5">
           <img src="./imgs/single-image2.png" alt="pcworker" />
         </div>
-        <div class="col-12 col-lg-6 px-3">
+        <div class="col-12 col-lg-6 ps-3">
           <h2 style="font-size: 60px; margin-bottom: 20px">FAQs</h2>
-          <h3>
+          <h3 class="minus">
             Come posso utilizzare la paperella di gomma per il debugging?
             <hr />
             <p style="font-size: 12px; padding-left: 20px; opacity: 70%">
@@ -434,6 +434,18 @@
               passo, potresti individuare errori o capire meglio il problema La
               paperella non risponde, ma ti aiuta a chiarire i tuoi pensieri.
             </p>
+          </h3>
+          <h3 class="plus my-5">
+            Quali sono i vantaggi di usare una paperella di gomma per i
+            programmatori?
+          </h3>
+          <h3 class="plus mb-5">
+            Posso usare la paperella di gomma indipendentemente dal linguaggio
+            di programmazione che utilizzo
+          </h3>
+          <h3 class="plus">
+            Quanto dettagliatamente devo spiegare il mio codice alla paperella
+            di gomma?
           </h3>
         </div>
       </div>
