button for carousel

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         </div>
       </div>
     </header>
+
     <section class="3-row mt-5 container-lg">
       <div class="row gx-0 align-items-center">
         <div class="col-lg-4 px-5">
@@ -206,6 +207,50 @@
       >
         Cosa ne pensano i nostri sviluppatori
       </h2>
+      <div id="carouselExampleIndicators" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <p>ciao!</p>
+          </div>
+          <div class="carousel-item">
+            <img src="#" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img src="#" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img src="#" class="d-block w-100" alt="..." />
+          </div>
+        </div>
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
+        </div>
+      </div>
       <h2 class="text-center" style="font-size: 60px">
         La collezione di paperelle
       </h2>
@@ -448,6 +493,33 @@
             di gomma?
           </h3>
         </div>
+      </div>
+    </section>
+    <section class="info container-lg">
+      <div class="row">
+        <div class="col-6 col-lg-4 text-center">
+          <symbol
+            xmlns="http://www.w3.org/2000/svg"
+            id="balloon"
+            viewBox="0 0 24 24"
+          >
+            <g
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-width="1.5"
+            >
+              <path
+                d="M8 16.607c1.15.86 2.518 1.38 4 1.393c4.142.034 7.594-3.92 7.56-8.196C19.527 5.53 16.142 2.034 12 2c-4.142-.034-7.473 3.404-7.44 7.68A8.88 8.88 0 0 0 5.244 13"
+              />
+              <path
+                d="M15.5 9a3.035 3.035 0 0 0-3-3M12 20.35c.321 0 .482 0 .593-.022c.654-.128 1.051-.772.858-1.39c-.033-.105-.109-.242-.261-.515M12 20.35c-.321 0-.482 0-.593-.022c-.654-.128-1.051-.772-.858-1.39c.033-.105.109-.242.261-.515M12 20.35v2.15"
+              />
+            </g>
+          </symbol>
+        </div>
+        <div class="col-6 col-lg-4 text-center"></div>
+        <div class="col-6 col-lg-4 text-center"></div>
       </div>
     </section>
     <!-- bootstrap script -->
