--- a/index.html
+++ b/index.html
@@ -1108,6 +1108,9 @@
         </div>
       </div>
     </footer>
+    <div class="d-flex justify-content-center pt-2">
+      <p>&copy; 2024 BooLanding Product. Designed by Boolean</p>
+    </div>
     <!-- bootstrap script -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
