--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@
             </svg>
           </span>
         </div>
-        <div class="mt-5 d-flex iconcontainer justify-content-center mb-2">
+        <div class="mt-5 d-flex iconcontainer justify-content-center pb-3">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             id="facebook"
@@ -1108,7 +1108,7 @@
         </div>
       </div>
     </footer>
-    <div class="d-flex justify-content-center pt-2">
+    <div class="d-flex justify-content-center mt-2">
       <p>&copy; 2024 BooLanding Product. Designed by Boolean</p>
     </div>
     <!-- bootstrap script -->
